@@ -1,5 +1,8 @@
 2007-01-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gnomeprint/__init__.py: Add a warning stating that gnomeprint is
+	now deprecated in favour of cairo and gtk.
+
 	* gnomeapplet/Makefile.am:
 	* gnomedesktop/Makefile.am:
 	* gnomekeyring/Makefile.am:
